[package]
name = "cf-ws-v1"
version = "0.1.0"
authors = ["Crypto Facilities"]
edition = "2021"

[dependencies]
base64 = "0.13"
futures = "0.1"
log = "0.4"
native-tls = "0.2"
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.1"
websocket = "0.23"

[dev-dependencies]
env_logger = "0.9"
