[package]
name = "cf-ws-v1"
version = "0.1.0"
authors = ["Crypto Facilities"]
edition = "2021"

[dependencies]
base64 = "0.21"
futures = "0.1"
hmac = { version = "0.12.1", features = ["std"] }
log = "0.4"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10.6", features = ["std"] }
tokio = "0.1"
websocket = "0.23"

[dev-dependencies]
env_logger = "0.10"
