[package]
name = "cf-ws-v1"
version = "0.1.0"
authors = ["Crypto Facilities"]
edition = "2021"

[dependencies]
base64 = "0.21"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
hmac = { version = "0.12", features = ["std"] }
log = "0.4"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["std"] }
tokio = { version = "1.24.2", features = ["sync", "rt", "macros", "io-std"] }
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
env_logger = "0.10"
